--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorCustomAccent">#D500F9</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
