--- a/app/src/main/res/layout/activity_editare_cont.xml
+++ b/app/src/main/res/layout/activity_editare_cont.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditareContActivity">
+    tools:context=".Activities.EditareContActivity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/EditareContScroll"
