--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WelcomeActivity">
+    tools:context=".Activities.WelcomeActivity">
 
     <fragment
         android:id="@+id/fragment3"
-        android:name="com.example.budgettracker.WelcomeFragment1"
+        android:name="com.example.budgettracker.Fragments.WelcomeFragment1"
         android:layout_width="307dp"
         android:layout_height="332dp"
         app:layout_constraintBottom_toBottomOf="parent"
