--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="57dp"
         android:layout_marginTop="8dp"
-        android:onClick="inregistrateBtn"
+        android:onClick="onClickRegister"
         android:text="@string/inregButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewPassword2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonInfoRegisterBottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
