--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="color_eur">#1470CC</color>
     <color name="color_usd">#298C2F</color>
     <color name="color_ron">#CC1F1F</color>
+    <color name="red">#DA0404</color>
 </resources>
